...
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvNoResultsInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srlSearchResults" />

    <TextView
        android:id="@+id/tvNoResultsInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlSearchResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="75dp"
            android:scrollbarStyle="outsideOverlay"
            app:layout_constraintStart_toStartOf="parent"
...
